CSS fix so that iFrames fit on mobile Some articles, two on rap: Jay, Kendrick Editing some other articles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,14 @@ body {
     margin: 0;
 }
 
-html, body, #___gatsby, #gatsby-focus-wrapper {
+html,
+body,
+#___gatsby,
+#gatsby-focus-wrapper {
     overflow-y: hidden;
+}
+
+iframe {
+    margin: 0 auto;
+    max-width: 100%;
 }
